feat(dsa): solve Day 3 problems - subarray , substrings using two pointers and sliding window